objects/nSBA__Contact_Stocks_And_Bonds__c.object
<CustomObject>
    <description>Bonds and stocks owned by primary contact. Used in Form 413 for SBA UI</description>
    <fields>
        <fullName>nSBA__Contact_Name__c</fullName>
        <description>Name of contact</description>
        <inlineHelpText>Name of contact</inlineHelpText>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Stocks And Bonds</relationshipLabel>
        <relationshipName>Contact_Stocks_And_Bonds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nSBA__Cost__c</fullName>
        <description>Cost of stocks and bonds</description>
        <inlineHelpText>Cost of stocks and bonds</inlineHelpText>
        <label>Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Date_of_Quotation_Exchange__c</fullName>
        <description>Date of quotation/exchange</description>
        <inlineHelpText>Date of quotation/exchange</inlineHelpText>
        <label>Date of Quotation Exchange</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Market_Value_Quotation_Exchange__c</fullName>
        <description>Market value quotation/exchange</description>
        <inlineHelpText>Market value quotation/exchange</inlineHelpText>
        <label>Market Value Quotation Exchange</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Name_Of_Securities__c</fullName>
        <description>Name of Securities</description>
        <inlineHelpText>Name of Securities</inlineHelpText>
        <label>Name Of Securities</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Number_Of_Shares__c</fullName>
        <description>Number of shares owned</description>
        <inlineHelpText>Number of shares owned</inlineHelpText>
        <label>Number Of Shares</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__Total_Value__c</fullName>
        <description>Total value of stocks/bonds</description>
        <formula>nSBA__Number_Of_Shares__c * nSBA__Market_Value_Quotation_Exchange__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total value of stocks/bonds</inlineHelpText>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Contact Stocks And Bonds</label>
    <nameField>
        <label>Contact Stocks And Bonds Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Stocks And Bonds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>